--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -27,6 +27,7 @@
 <!-- Services -->
 <script src="app/services/User.js"></script>
 <script src="app/services/Website.js"></script>
+<script src="app/services/Page.js"></script>
 <!-- Controllers -->
 <script src="app/controllers/common/MenuCtrl.js"></script>
 <script src="app/controllers/user/LoginCtrl.js"></script>
@@ -35,6 +36,7 @@
 <script src="app/controllers/website/WebsiteListCtrl.js"></script>
 <script src="app/controllers/website/WebsiteNewCtrl.js"></script>
 <script src="app/controllers/website/WebsiteEditCtrl.js"></script>
+<script src="app/controllers/page/PageListCtrl.js"></script>
 
 </body>
 </html>
