--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -24,6 +24,9 @@
 <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.js"></script>
 <script src="app/app.js"></script>
 <script src="app/appConfig.js"></script>
+<!-- ng-file-upload Library -->
+<script src="app/libraries/ng-file-upload-shim.min.js"></script>
+<script src="app/libraries/ng-file-upload-all.min.js"></script>
 <!-- Services -->
 <script src="app/services/User.js"></script>
 <script src="app/services/Website.js"></script>
@@ -43,5 +46,6 @@
 <script src="app/controllers/widget/WidgetListCtrl.js"></script>
 <script src="app/controllers/widget/WidgetEditCtrl.js"></script>
 <script src="app/controllers/widget/WidgetNewCtrl.js"></script>
+
 </body>
 </html>
