--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -32,6 +32,7 @@
 <script src="app/services/Website.js"></script>
 <script src="app/services/Page.js"></script>
 <script src="app/services/Widget.js"></script>
+<script src="app/services/Flickr.js"></script>
 <!-- Controllers -->
 <script src="app/controllers/common/MenuCtrl.js"></script>
 <script src="app/controllers/user/LoginCtrl.js"></script>
