--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -24,9 +24,16 @@
 <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.js"></script>
 <script src="app/app.js"></script>
 <script src="app/appConfig.js"></script>
+<!-- FontAwesome -->
+<script src="https://use.fontawesome.com/c8d811335b.js"></script>
 <!-- ng-file-upload Library -->
 <script src="app/libraries/ng-file-upload-shim.min.js"></script>
 <script src="app/libraries/ng-file-upload-all.min.js"></script>
+<!-- textAngular Library -->
+<link rel='stylesheet' href='app/libraries/textAngular.css'>
+<script src='app/libraries/textAngular-rangy.min.js'></script>
+<script src='app/libraries/textAngular-sanitize.min.js'></script>
+<script src='app/libraries/textAngular.min.js'></script>
 <!-- Services -->
 <script src="app/services/User.js"></script>
 <script src="app/services/Website.js"></script>
