--- a/public/project/index.html
+++ b/public/project/index.html
@@ -1,10 +1,45 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Project Home Page</title>
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+
+    <title>Project</title>
+
+    <!-- Angular Material style sheet -->
+    <link rel="stylesheet"
+          href="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.css">
+    <link rel="stylesheet" href="css/arc-style.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+          rel="stylesheet">
 </head>
-<body>
-    <h1>Project Home Page</h1>
+<body class="arc-body" ng-app="Arcus" ng-cloak>
+
+<div class="arc-body" ng-view></div>
+
+<!-- jQuery -->
+<script src="https://code.jquery.com/jquery-2.0.3.min.js"></script>
+<script src="https://code.jquery.com/ui/1.10.3/jquery-ui.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
+<!-- Angular Material requires Angular.js Libraries -->
+<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular.min.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-animate.min.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-aria.min.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-messages.min.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-route.js"></script>
+<!-- Angular Material Library -->
+<script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.js"></script>
+<script src="app/app.js"></script>
+<script src="app/appConfig.js"></script>
+<!-- FontAwesome -->
+<script src="https://use.fontawesome.com/c8d811335b.js"></script>
+<!-- Services -->
+
+<!-- Controllers -->
+
+<!-- Directives -->
+<script src="app/directives/arcMenu/arcMenu.js"></script>
+<script src="app/directives/arcSidenav/arcSidenav.js"></script>
+
+
 </body>
 </html>
